Fix navbar on mobile

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -52,6 +52,14 @@ button {
   color: white;
 }
 
+.content {
+  position: relative;
+  background-color: #eee;
+  overflow: hidden;
+  overflow-y: scroll;
+  height: calc(100% - #{$navbar-height});
+}
+
 @media screen and (min-width: 600px) {
   .desktop-blocker {
     display: block;
